--- a/map.html
+++ b/map.html
@@ -43,7 +43,9 @@
     const tooltip = d3.select("#tooltip");
 
     // Load GeoJSON data for US states
-    d3.json("https://raw.githubusercontent.com/PublicaMundi/MappingAPI/master/data/geojson/us-states.json").then(data => {
+    d3.json("https://d3js.org/us-10m.v1.json").then(data => {
+      const states = topojson.feature(data, data.objects.states);
+
       const projection = d3.geoAlbersUsa()
         .translate([width / 2, height / 2])
         .scale(1000);
@@ -51,7 +53,7 @@
       const path = d3.geoPath().projection(projection);
 
       svg.selectAll(".state")
-        .data(data.features)
+        .data(states.features)
         .enter()
         .append("path")
         .attr("class", "state")
@@ -71,5 +73,6 @@
         });
     });
   </script>
+  <script src="https://d3js.org/topojson.v3.min.js"></script>
 </body>
 </html>
