--- a/map.html
+++ b/map.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>US Map with D3</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://d3js.org/topojson.v3.min.js"></script>
   <style>
     .state {
       fill: #ccc;
@@ -42,8 +43,9 @@
 
     const tooltip = d3.select("#tooltip");
 
-    // Load GeoJSON data for US states
+    // Load TopoJSON data for US states
     d3.json("https://d3js.org/us-10m.v1.json").then(data => {
+      // Convert TopoJSON to GeoJSON
       const states = topojson.feature(data, data.objects.states);
 
       const projection = d3.geoAlbersUsa()
@@ -60,7 +62,7 @@
         .attr("d", path)
         .on("mouseover", (event, d) => {
           tooltip.style("opacity", 1)
-            .html(d.properties.name)
+            .html(`State ID: ${d.id}`) // Use `d.id` since `properties.name` may not exist
             .style("left", (event.pageX + 10) + "px")
             .style("top", (event.pageY - 20) + "px");
         })
@@ -73,6 +75,5 @@
         });
     });
   </script>
-  <script src="https://d3js.org/topojson.v3.min.js"></script>
 </body>
 </html>
